# LSTS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Inference.md  LICENSE  Makefile  PHILOSOPHY.md  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml
benches/: big_file.rs
examples/: adder.tlc  adder_infix.tlc  fibonacci.tlc  one_plus_one.tlc  right_triangles.tlc  si.tlc  string_formatting.tlc  tuples.tlc
inference/: README.md
preludes/: algebra.tlc  l1.tlc  si.tlc
src/: README.md  constant.rs  debug.rs  dfa.rs  grammar_tlc.pest  kind.rs  lib.rs  ll.rs  main.rs  scope.rs  term.rs  tlc.pest  tlc.rs  token.rs  typ.rs  util.rs
src/rust/: mod.rs  parse.rs
src/syntax/: mod.rs  tlc.rs
tests/: README.md  a_implies.rs  a_mgu.rs  a_tokenize.rs  algebra.rs  ast.rs  axioms.rs  b_parser.rs  b_tlc.rs  blocks.rs  c_algebra.rs  c_axioms.rs  c_blocks.rs  c_l1.rs  c_l1ir.rs  c_plural_types.rs  c_props.rs  c_stress.rs  c_strict.rs  debug_dependent_types.rs  debug_destructuring.rs  debug_examples.rs  debug_hints.rs  debug_invariants.rs  debug_iterators.rs  debug_messaging.rs  debug_order_of_operations.rs  debug_si.rs  debug_si_prelude_misc.rs  debug_tensor.rs  debug_unification_clobbering.rs  dependent_types.rs  destructuring.rs  dtype.rs  examples.rs  formula.rs  fundamental_theorem_of_algebra.rs  goals.rs  hints.rs  implication.rs  (+29 more)
tests/blame/: move1.rs
tests/rust/: ast2.rs
tests/rust/blame/: function1.rs  int1.rs  mut1.rs
tests/stress/: 1.tlc  10.tlc  100.tlc  10k.tlc  1k.tlc
tests/tlc/: prelude.tlc
