[package]
name = "lsts"
version = "0.6.4"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Large Scale Type Systems"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/LSTS"
documentation = "https://andrew-johnson-4.github.io/lsts-tutorial/"
keywords = ["type","logic","automated","theorem","proof"]

[dependencies]
regex = { version = "1" }

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
opt-level = 3
#rustflags = [
#  "-C", "link-args=-z stack-size=1500000",
#]

[[bench]]
name = "big_file"
harness = false

[[bin]]
name = "lsts"
path = "src/main.rs"
