[package]
name = "lsts"
version = "0.6.27"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Large Scale Type Systems"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/LSTS"
documentation = "https://andrew-johnson-4.github.io/lsts-tutorial/"
keywords = ["type","logic","automated","theorem","proof"]

[dependencies]
regex = { version = "1" }
#l1_ir = { version = "0.0.45" }
l1_ir = { path = "../L1IR" }
gag   = { version = "1" }

[[bench]]
name = "big_file"
harness = false

[[bin]]
name = "lsts"
path = "src/main.rs"
