[package]
name = "lsts"
version = "0.6.34"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Large Scale Type Systems"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/LSTS"
documentation = "https://andrew-johnson-4.github.io/lsts-tutorial/"
keywords = ["type","logic","automated","theorem","proof"]

[dependencies]
regex = { version = "1" }
lambda_mountain = { version = "0.0.16" }
gag   = { version = "1" }

[[bench]]
name = "big_file"
harness = false

[[bin]]
name = "lsts"
path = "src/main.rs"
